fix: correct immutability error when deleting category